feat(crypto): add new crypto package
